<resources>
    <string name="app_name">HelloApp</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="del">/</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="num">*</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="com">,</string>
    <string name="plus">+</string>
    <string name="equal">=</string>
    <string name="clear">C</string>
    <string name="operation_clearOne"><![CDATA[<-]]></string>
    <string name="operation_procent">%</string>
    <string name="two_zero">00</string>
    <string name="operation_plusMinus">+-</string>
</resources>